// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectNetworkStep should render 1`] = `
<DocumentFragment>
  <section
    data-testid="NetworkStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          title
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          subtitle
        </div>
      </div>
    </div>
    <fieldset
      class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col mt-8 space-y-2"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
      </label>
      <div>
        <div
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-owns="NetworkStep__network-menu"
          data-testid="SelectNetwork"
          role="combobox"
        >
          <label
            for="NetworkStep__network-input"
            id="NetworkStep__network-label"
          />
          <div
            class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy"
          >
            <div
              class="Circle__CircleWrapper-sc-d5u41q-0 cPUFYC border-theme-secondary-200 dark:border-theme-secondary-700 text-theme-secondary-500 ring-theme-background"
              data-testid="SelectNetworkInput__network"
            />
            <div
              class="relative flex flex-1 h-full"
            >
              <input
                aria-autocomplete="list"
                aria-controls="NetworkStep__network-menu"
                aria-labelledby="NetworkStep__network-label"
                autocomplete="off"
                class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                data-testid="SelectNetworkInput__input"
                id="NetworkStep__network-input"
                placeholder="Enter a cryptoasset name"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class=""
          data-testid="SelectNetwork__options"
        >
          <div
            class="mt-6"
          >
            <div
              class="text-sm font-bold text-theme-secondary-400 dark:text-theme-secondary-700"
            >
              PUBLIC NETWORKS
            </div>
            <ul
              aria-labelledby="NetworkStep__network-label"
              class="grid grid-cols-7 gap-3 mt-3"
              id="NetworkStep__network-menu"
              role="listbox"
            >
              <li
                class="inline-block cursor-pointer h-18"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="ARK"
                  class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-600"
                  data-testid="NetworkIcon-ARK-ark.mainnet"
                >
                  <div
                    class="sc-bdnxRM NjstW"
                    data-testid="NetworkIcon__icon"
                    height="20"
                    width="20"
                  >
                    <svg>
                      ark.svg
                    </svg>
                  </div>
                </div>
              </li>
              <li
                class="inline-block cursor-pointer h-18"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="Blockpool"
                  class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-600"
                  data-testid="NetworkIcon-ARK-bpl.mainnet"
                >
                  <div
                    class="sc-bdnxRM NjstW"
                    data-testid="NetworkIcon__icon"
                    height="20"
                    width="20"
                  >
                    <svg>
                      bpl.svg
                    </svg>
                  </div>
                </div>
              </li>
              <li
                class="inline-block cursor-pointer h-18"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="Compendia"
                  class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-600"
                  data-testid="NetworkIcon-ARK-bind.mainnet"
                >
                  <div
                    class="sc-bdnxRM NjstW"
                    data-testid="NetworkIcon__icon"
                    height="20"
                    width="20"
                  >
                    <svg>
                      bind.svg
                    </svg>
                  </div>
                </div>
              </li>
              <li
                class="inline-block cursor-pointer h-18"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="Qredit"
                  class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-600"
                  data-testid="NetworkIcon-ARK-xqr.mainnet"
                >
                  <div
                    class="sc-bdnxRM NjstW"
                    data-testid="NetworkIcon__icon"
                    height="20"
                    width="20"
                  >
                    <svg>
                      xqr.svg
                    </svg>
                  </div>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="Divider-sc-17ehhxk-0 hZpmpp border-theme-secondary-300 dark:border-theme-secondary-800"
            type="horizontal"
          />
          <div
            class="mt-6"
          >
            <div
              class="flex justify-between items-center"
            >
              <span
                class="text-sm font-bold text-theme-secondary-400 dark:text-theme-secondary-700"
              >
                DEVELOPMENT NETWORKS
              </span>
              <span
                data-testid="SelectNetwork__developmentNetworks"
              >
                <label
                  class="Toggle__Wrapper-sc-6s3wfu-0 kIsRpT"
                >
                  <input
                    class="Toggle__Input-sc-6s3wfu-1 utRNX"
                    data-testid="SelectNetwork__developmentNetworks-toggle"
                    type="checkbox"
                  />
                  <div
                    class="Toggle__Handle-sc-6s3wfu-2 cAxMdF"
                  >
                    <span
                      class="Toggle__HandleInner-sc-6s3wfu-3 fCjUWZ"
                    />
                  </div>
                </label>
              </span>
            </div>
            <ul
              aria-labelledby="NetworkStep__network-label"
              class="grid grid-cols-7 gap-3 mt-3 hidden"
              id="NetworkStep__network-menu"
              role="listbox"
            >
              <li
                class="inline-block cursor-pointer h-18"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="ARK Devnet"
                  class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
                  data-testid="NetworkIcon-ARK-ark.devnet"
                >
                  <div
                    class="sc-bdnxRM NjstW"
                    data-testid="NetworkIcon__icon"
                    height="20"
                    width="20"
                  >
                    <svg>
                      ark.svg
                    </svg>
                  </div>
                </div>
              </li>
              <li
                class="inline-block cursor-pointer h-18"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="Compendia Testnet"
                  class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
                  data-testid="NetworkIcon-ARK-bind.testnet"
                >
                  <div
                    class="sc-bdnxRM NjstW"
                    data-testid="NetworkIcon__icon"
                    height="20"
                    width="20"
                  >
                    <svg>
                      bind.svg
                    </svg>
                  </div>
                </div>
              </li>
              <li
                class="inline-block cursor-pointer h-18"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="Qredit Testnet"
                  class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
                  data-testid="NetworkIcon-ARK-xqr.testnet"
                >
                  <div
                    class="sc-bdnxRM NjstW"
                    data-testid="NetworkIcon__icon"
                    height="20"
                    width="20"
                  >
                    <svg>
                      xqr.svg
                    </svg>
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </fieldset>
  </section>
</DocumentFragment>
`;

exports[`SelectNetworkStep should render without test networks 1`] = `
<DocumentFragment>
  <section
    data-testid="NetworkStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          title
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          subtitle
        </div>
      </div>
    </div>
    <fieldset
      class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col mt-8 space-y-2"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
      </label>
      <div>
        <div
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-owns="NetworkStep__network-menu"
          data-testid="SelectNetwork"
          role="combobox"
        >
          <label
            for="NetworkStep__network-input"
            id="NetworkStep__network-label"
          />
          <div
            class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy"
          >
            <div
              class="Circle__CircleWrapper-sc-d5u41q-0 cPUFYC border-theme-secondary-200 dark:border-theme-secondary-700 text-theme-secondary-500 ring-theme-background"
              data-testid="SelectNetworkInput__network"
            />
            <div
              class="relative flex flex-1 h-full"
            >
              <input
                aria-autocomplete="list"
                aria-controls="NetworkStep__network-menu"
                aria-labelledby="NetworkStep__network-label"
                autocomplete="off"
                class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                data-testid="SelectNetworkInput__input"
                id="NetworkStep__network-input"
                placeholder="Enter a cryptoasset name"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class=""
          data-testid="SelectNetwork__options"
        >
          <div
            class="mt-6"
          >
            <ul
              aria-labelledby="NetworkStep__network-label"
              class="grid grid-cols-7 gap-3 mt-3"
              id="NetworkStep__network-menu"
              role="listbox"
            >
              <li
                class="inline-block cursor-pointer h-18"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="ARK"
                  class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-600"
                  data-testid="NetworkIcon-ARK-ark.mainnet"
                >
                  <div
                    class="sc-bdnxRM NjstW"
                    data-testid="NetworkIcon__icon"
                    height="20"
                    width="20"
                  >
                    <svg>
                      ark.svg
                    </svg>
                  </div>
                </div>
              </li>
              <li
                class="inline-block cursor-pointer h-18"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="Blockpool"
                  class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-600"
                  data-testid="NetworkIcon-ARK-bpl.mainnet"
                >
                  <div
                    class="sc-bdnxRM NjstW"
                    data-testid="NetworkIcon__icon"
                    height="20"
                    width="20"
                  >
                    <svg>
                      bpl.svg
                    </svg>
                  </div>
                </div>
              </li>
              <li
                class="inline-block cursor-pointer h-18"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="Compendia"
                  class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-600"
                  data-testid="NetworkIcon-ARK-bind.mainnet"
                >
                  <div
                    class="sc-bdnxRM NjstW"
                    data-testid="NetworkIcon__icon"
                    height="20"
                    width="20"
                  >
                    <svg>
                      bind.svg
                    </svg>
                  </div>
                </div>
              </li>
              <li
                class="inline-block cursor-pointer h-18"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="Qredit"
                  class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-600"
                  data-testid="NetworkIcon-ARK-xqr.mainnet"
                >
                  <div
                    class="sc-bdnxRM NjstW"
                    data-testid="NetworkIcon__icon"
                    height="20"
                    width="20"
                  >
                    <svg>
                      xqr.svg
                    </svg>
                  </div>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="mt-6 hidden"
          >
            <div
              class="flex justify-between items-center"
            >
              <span
                class="text-sm font-bold text-theme-secondary-400 dark:text-theme-secondary-700"
              >
                DEVELOPMENT NETWORKS
              </span>
              <span
                data-testid="SelectNetwork__developmentNetworks"
              >
                <label
                  class="Toggle__Wrapper-sc-6s3wfu-0 kIsRpT"
                >
                  <input
                    class="Toggle__Input-sc-6s3wfu-1 utRNX"
                    data-testid="SelectNetwork__developmentNetworks-toggle"
                    type="checkbox"
                  />
                  <div
                    class="Toggle__Handle-sc-6s3wfu-2 cAxMdF"
                  >
                    <span
                      class="Toggle__HandleInner-sc-6s3wfu-3 fCjUWZ"
                    />
                  </div>
                </label>
              </span>
            </div>
            <ul
              aria-labelledby="NetworkStep__network-label"
              class="grid grid-cols-7 gap-3 mt-3 hidden"
              id="NetworkStep__network-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
    </fieldset>
  </section>
</DocumentFragment>
`;
